Cannot find error

--- a/Offline 2/1605053.ipynb
+++ b/Offline 2/1605053.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 364,
+   "execution_count": 236,
    "metadata": {
     "collapsed": true
    },
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 365,
+   "execution_count": 237,
    "outputs": [],
    "source": [
     "# get stationary dustribution of transition matrix\n",
@@ -38,25 +38,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 366,
+   "execution_count": 238,
    "outputs": [],
    "source": [
     "def estimate_sequence(state_transition_matrix:np.ndarray, gaussian_params: np.ndarray, initial_state_probability:np.ndarray, observations:np.ndarray, state_count: int, state_converter:dict):\n",
     "    observation_count = observations.shape[0]\n",
-    "    state_probability_matrix = np.zeros((state_count, observation_count))\n",
+    "    state_probability_matrix = np.ndarray((state_count, observation_count))\n",
     "    path = np.ndarray((state_count, observation_count-1), dtype=int)\n",
     "    emission_matrix = norm(loc=gaussian_params[0,:], scale=gaussian_params[1,:]).pdf(observations).T\n",
-    "    emission_matrix = normalize(emission_matrix, axis=0)\n",
+    "    # emission_matrix = normalize(emission_matrix, axis=0)\n",
     "    state_probability_matrix[:,0] = np.log(initial_state_probability) + np.log(emission_matrix[:,0])\n",
     "    for i in range(1, observation_count):\n",
     "        for j in range(state_count):\n",
-    "            prob = state_probability_matrix[:,i-1] + np.log(state_transition_matrix[:,j]) + np.log(emission_matrix[j,i])\n",
+    "            prob = state_probability_matrix[:,i-1] + np.log(state_transition_matrix[j,:].T) + np.log(emission_matrix[j,i])\n",
     "            path[j,i-1] = np.argmax(prob)\n",
     "            state_probability_matrix[j,i] = max(prob)\n",
     "\n",
-    "    out_path = ['' for i in range(observation_count)]\n",
+    "    out_path = ['' for _ in range(observation_count)]\n",
     "    sink_index = np.argmax(state_probability_matrix[:,-1])\n",
-    "    out_path[observation_count-1] = state_converter[sink_index]\n",
+    "    out_path[-1] = state_converter[sink_index]\n",
     "    for i in range(observation_count-2,-1,-1):\n",
     "        sink_index = path[sink_index, i]\n",
     "        out_path[i] = state_converter[sink_index]\n",
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 367,
+   "execution_count": 239,
    "outputs": [],
    "source": [
     "# Viterbi algorithm\n",
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 368,
+   "execution_count": 240,
    "outputs": [],
    "source": [
     "# Baum-Welch Learning\n",
@@ -104,13 +104,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 369,
+   "execution_count": 241,
    "outputs": [
     {
      "data": {
       "text/plain": "(1000, 1)"
      },
-     "execution_count": 369,
+     "execution_count": 241,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -129,8 +129,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 370,
-   "outputs": [],
+   "execution_count": 242,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "array([[200, 100],\n       [ 10,  10]])"
+     },
+     "execution_count": 242,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# read parameters\n",
     "with open('./Input/parameters.txt.txt', 'r') as f:\n",
@@ -140,7 +149,9 @@
     "    transition_matrix = np.genfromtxt(islice(lines, 1, 1+no_of_states))\n",
     "\n",
     "with open('./Input/parameters.txt.txt', 'r') as lines:\n",
-    "    gaussian_parameters = np.genfromtxt(islice(lines, 1+no_of_states, 1+2*no_of_states), dtype=int)"
+    "    gaussian_parameters = np.genfromtxt(islice(lines, 1+no_of_states, 1+2*no_of_states), dtype=int)\n",
+    "\n",
+    "gaussian_parameters"
    ],
    "metadata": {
     "collapsed": false,
@@ -151,14 +162,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 371,
-   "outputs": [],
+   "execution_count": 243,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "array([0.25, 0.75])"
+     },
+     "execution_count": 243,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "initial_distribution = get_stationary_distibution(transition_matrix)\n",
     "index_state_map = {\n",
     "    0: '\\\"El Nino\\\"',\n",
     "    1: '\\\"La Nina\\\"'\n",
-    "}"
+    "}\n",
+    "initial_distribution"
    ],
    "metadata": {
     "collapsed": false,
@@ -169,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 372,
+   "execution_count": 244,
    "outputs": [],
    "source": [
     "a, b, c, hidden_path = estimate_sequence(transition_matrix, gaussian_parameters, initial_distribution, observed_states, no_of_states, index_state_map)"
@@ -183,13 +204,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 373,
+   "execution_count": 245,
    "outputs": [
     {
      "data": {
       "text/plain": "array([[1, 1, 1, ..., 0, 0, 1],\n       [1, 1, 1, ..., 1, 1, 1]])"
      },
-     "execution_count": 373,
+     "execution_count": 245,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -207,13 +228,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 374,
+   "execution_count": 246,
    "outputs": [
     {
      "data": {
-      "text/plain": "array([[-4.68619767e+01, -5.42948762e+01, -5.14943271e+01, ...,\n        -5.36454548e+02, -5.90702136e+02, -5.89241290e+02],\n       [-2.87682072e-01, -3.93042588e-01, -4.98403104e-01, ...,\n        -5.35555976e+02, -5.35661337e+02, -5.35766697e+02]])"
+      "text/plain": "array([[-5.01858476e+01, -5.97561869e+01, -6.01843770e+01, ...,\n        -1.02142021e+04, -1.02717469e+04, -1.02735158e+04],\n       [-3.61155295e+00, -6.95296555e+00, -1.02870653e+01, ...,\n        -1.02144021e+04, -1.02178047e+04, -1.02211398e+04]])"
      },
-     "execution_count": 374,
+     "execution_count": 246,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -230,13 +251,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 375,
+   "execution_count": 247,
    "outputs": [
     {
      "data": {
-      "text/plain": "array([[1.77894327e-20, 3.50730551e-23, 6.41200887e-22, ...,\n        3.14837047e-01, 3.93979520e-24, 5.37677679e-23],\n       [1.00000000e+00, 1.00000000e+00, 1.00000000e+00, ...,\n        9.49145739e-01, 1.00000000e+00, 1.00000000e+00]])"
+      "text/plain": "array([[6.40653671e-22, 1.37903101e-24, 2.53963017e-23, ...,\n        8.51062085e-08, 1.45716704e-25, 2.12759494e-24],\n       [3.60131591e-02, 3.93188164e-02, 3.96074027e-02, ...,\n        2.56571442e-07, 3.69858576e-02, 3.95700812e-02]])"
      },
-     "execution_count": 375,
+     "execution_count": 247,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -253,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 376,
+   "execution_count": 248,
    "outputs": [
     {
      "name": "stdout",
