My code was correct

--- a/Offline 2/1605053.ipynb
+++ b/Offline 2/1605053.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 236,
+   "execution_count": 155,
    "metadata": {
     "collapsed": true
    },
@@ -13,12 +13,13 @@
     "from itertools import islice\n",
     "from scipy.linalg import eig\n",
     "from scipy.stats import norm\n",
-    "from sklearn.preprocessing import normalize"
+    "from numpy import float64\n",
+    "import pathlib"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 237,
+   "execution_count": 156,
    "outputs": [],
    "source": [
     "# get stationary dustribution of transition matrix\n",
@@ -38,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 238,
+   "execution_count": 157,
    "outputs": [],
    "source": [
     "def estimate_sequence(state_transition_matrix:np.ndarray, gaussian_params: np.ndarray, initial_state_probability:np.ndarray, observations:np.ndarray, state_count: int, state_converter:dict):\n",
@@ -50,7 +51,7 @@
     "    state_probability_matrix[:,0] = np.log(initial_state_probability) + np.log(emission_matrix[:,0])\n",
     "    for i in range(1, observation_count):\n",
     "        for j in range(state_count):\n",
-    "            prob = state_probability_matrix[:,i-1] + np.log(state_transition_matrix[j,:].T) + np.log(emission_matrix[j,i])\n",
+    "            prob = state_probability_matrix[:,i-1] + np.log(state_transition_matrix[:,j]) + np.log(emission_matrix[j,i])\n",
     "            path[j,i-1] = np.argmax(prob)\n",
     "            state_probability_matrix[j,i] = max(prob)\n",
     "\n",
@@ -72,12 +73,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 239,
+   "execution_count": 158,
    "outputs": [],
    "source": [
     "# Viterbi algorithm\n",
-    "def viterbi():\n",
-    "    pass"
+    "def viterbi(state_transition_matrix:np.ndarray, gaussian_params: np.ndarray, initial_state_probability:np.ndarray, observations:np.ndarray, state_count: int, state_converter:dict):\n",
+    "    observation_count = observations.shape[0]\n",
+    "    state_probability_matrix = np.ndarray((state_count, observation_count), dtype=float64)\n",
+    "    path = np.ndarray((state_count, observation_count-1), dtype=int)\n",
+    "    emission_matrix = norm(loc=gaussian_params[0,:], scale=gaussian_params[1,:]).pdf(observations).T\n",
+    "    state_probability_matrix[:,0] = np.log(initial_state_probability) + np.log(emission_matrix[:,0])\n",
+    "    for i in range(1, observation_count):\n",
+    "        prob = state_probability_matrix[:,i-1] + np.log(state_transition_matrix) + np.log(emission_matrix[:,i].reshape(-1,1))\n",
+    "        path[:,i-1] = np.argmax(prob, axis=1)\n",
+    "        state_probability_matrix[:,i] = np.max(prob, axis=1)\n",
+    "\n",
+    "    out_path = ['' for _ in range(observation_count)]\n",
+    "    sink_index = np.argmax(state_probability_matrix[:,-1])\n",
+    "    out_path[-1] = state_converter[sink_index]\n",
+    "    for i in range(observation_count-2,-1,-1):\n",
+    "        sink_index = path[sink_index, i]\n",
+    "        out_path[i] = state_converter[sink_index]\n",
+    "\n",
+    "    return path, state_probability_matrix, emission_matrix, out_path"
    ],
    "metadata": {
     "collapsed": false,
@@ -88,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 240,
+   "execution_count": 159,
    "outputs": [],
    "source": [
     "# Baum-Welch Learning\n",
@@ -104,13 +122,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 241,
+   "execution_count": 160,
    "outputs": [
     {
      "data": {
       "text/plain": "(1000, 1)"
      },
-     "execution_count": 241,
+     "execution_count": 160,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -129,13 +147,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 242,
+   "execution_count": 161,
    "outputs": [
     {
      "data": {
       "text/plain": "array([[200, 100],\n       [ 10,  10]])"
      },
-     "execution_count": 242,
+     "execution_count": 161,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -162,13 +180,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 243,
+   "execution_count": 162,
    "outputs": [
     {
      "data": {
-      "text/plain": "array([0.25, 0.75])"
+      "text/plain": "(2,)"
      },
-     "execution_count": 243,
+     "execution_count": 162,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -179,7 +197,7 @@
     "    0: '\\\"El Nino\\\"',\n",
     "    1: '\\\"La Nina\\\"'\n",
     "}\n",
-    "initial_distribution"
+    "initial_distribution.shape"
    ],
    "metadata": {
     "collapsed": false,
@@ -190,10 +208,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 244,
+   "execution_count": 163,
    "outputs": [],
    "source": [
-    "a, b, c, hidden_path = estimate_sequence(transition_matrix, gaussian_parameters, initial_distribution, observed_states, no_of_states, index_state_map)"
+    "# estimate_sequence(transition_matrix, gaussian_parameters, initial_distribution, observed_states, no_of_states, index_state_map)"
    ],
    "metadata": {
     "collapsed": false,
@@ -204,20 +222,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 245,
+   "execution_count": 164,
+   "outputs": [],
+   "source": [
+    "a, b, c, hidden_path = viterbi(transition_matrix, gaussian_parameters, initial_distribution, observed_states, no_of_states, index_state_map)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 165,
    "outputs": [
     {
      "data": {
-      "text/plain": "array([[1, 1, 1, ..., 0, 0, 1],\n       [1, 1, 1, ..., 1, 1, 1]])"
+      "text/plain": "array([[1, 1],\n       [1, 1],\n       [1, 1],\n       ...,\n       [0, 1],\n       [0, 1],\n       [1, 1]])"
      },
-     "execution_count": 245,
+     "execution_count": 165,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# norm.pdf(104.524317662043, loc=gaussian_parameters[:,0], scale=gaussian_parameters[:,1])\n",
-    "a"
+    "a.T"
    ],
    "metadata": {
     "collapsed": false,
@@ -228,19 +260,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 246,
+   "execution_count": 166,
    "outputs": [
     {
      "data": {
-      "text/plain": "array([[-5.01858476e+01, -5.97561869e+01, -6.01843770e+01, ...,\n        -1.02142021e+04, -1.02717469e+04, -1.02735158e+04],\n       [-3.61155295e+00, -6.95296555e+00, -1.02870653e+01, ...,\n        -1.02144021e+04, -1.02178047e+04, -1.02211398e+04]])"
+      "text/plain": "array([[-5.01858476e+01, -3.61155295e+00],\n       [-5.97561869e+01, -6.95296555e+00],\n       [-6.01843770e+01, -1.02870653e+01],\n       ...,\n       [-1.02142021e+04, -1.02144021e+04],\n       [-1.02717469e+04, -1.02178047e+04],\n       [-1.02735158e+04, -1.02211398e+04]])"
      },
-     "execution_count": 246,
+     "execution_count": 166,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "b"
+    "b.T"
    ],
    "metadata": {
     "collapsed": false,
@@ -251,19 +283,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 247,
+   "execution_count": 167,
    "outputs": [
     {
      "data": {
-      "text/plain": "array([[6.40653671e-22, 1.37903101e-24, 2.53963017e-23, ...,\n        8.51062085e-08, 1.45716704e-25, 2.12759494e-24],\n       [3.60131591e-02, 3.93188164e-02, 3.96074027e-02, ...,\n        2.56571442e-07, 3.69858576e-02, 3.95700812e-02]])"
+      "text/plain": "array([[6.40653671e-22, 3.60131591e-02],\n       [1.37903101e-24, 3.93188164e-02],\n       [2.53963017e-23, 3.96074027e-02],\n       ...,\n       [8.51062085e-08, 2.56571442e-07],\n       [1.45716704e-25, 3.69858576e-02],\n       [2.12759494e-24, 3.95700812e-02]])"
      },
-     "execution_count": 247,
+     "execution_count": 167,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "c"
+    "c.T"
    ],
    "metadata": {
     "collapsed": false,
@@ -274,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 248,
+   "execution_count": 168,
    "outputs": [
     {
      "name": "stdout",
@@ -296,7 +328,13 @@
     "    if item1 == item2:\n",
     "        match += 1\n",
     "\n",
-    "print(match)"
+    "print(match)\n",
+    "\n",
+    "pathlib.Path('./my_output').mkdir(parents=True, exist_ok=True)\n",
+    "\n",
+    "with open('./my_output/states_Viterbi_wo_learning.txt', 'w') as f:\n",
+    "    for item in hidden_path:\n",
+    "        f.write(item+'\\n')"
    ],
    "metadata": {
     "collapsed": false,
