Refactored the code to make it ready for Baum-Welch learning

--- a/Offline 2/1605053.ipynb
+++ b/Offline 2/1605053.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -10,16 +10,17 @@
    "source": [
     "# package imports\n",
     "import numpy as np\n",
+    "import pathlib\n",
     "from itertools import islice\n",
     "from scipy.linalg import eig\n",
     "from scipy.stats import norm\n",
     "from numpy import float64\n",
-    "import pathlib"
+    "from typing import List"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 2,
    "outputs": [],
    "source": [
     "# get stationary dustribution of transition matrix\n",
@@ -39,45 +40,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 3,
    "outputs": [],
    "source": [
-    "def estimate_sequence(state_transition_matrix:np.ndarray, gaussian_params: np.ndarray, initial_state_probability:np.ndarray, observations:np.ndarray, state_count: int, state_converter:dict):\n",
-    "    observation_count = observations.shape[0]\n",
-    "    state_probability_matrix = np.ndarray((state_count, observation_count))\n",
-    "    path = np.ndarray((state_count, observation_count-1), dtype=int)\n",
-    "    emission_matrix = norm(loc=gaussian_params[0,:], scale=gaussian_params[1,:]).pdf(observations).T\n",
-    "    # emission_matrix = normalize(emission_matrix, axis=0)\n",
-    "    state_probability_matrix[:,0] = np.log(initial_state_probability) + np.log(emission_matrix[:,0])\n",
-    "    for i in range(1, observation_count):\n",
-    "        for j in range(state_count):\n",
-    "            prob = state_probability_matrix[:,i-1] + np.log(state_transition_matrix[:,j]) + np.log(emission_matrix[j,i])\n",
-    "            path[j,i-1] = np.argmax(prob)\n",
-    "            state_probability_matrix[j,i] = max(prob)\n",
-    "\n",
-    "    out_path = ['' for _ in range(observation_count)]\n",
-    "    sink_index = np.argmax(state_probability_matrix[:,-1])\n",
-    "    out_path[-1] = state_converter[sink_index]\n",
-    "    for i in range(observation_count-2,-1,-1):\n",
-    "        sink_index = path[sink_index, i]\n",
-    "        out_path[i] = state_converter[sink_index]\n",
-    "\n",
-    "    return path, state_probability_matrix, emission_matrix, out_path"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 158,
-   "outputs": [],
-   "source": [
-    "# Viterbi algorithm\n",
-    "def viterbi(state_transition_matrix:np.ndarray, gaussian_params: np.ndarray, initial_state_probability:np.ndarray, observations:np.ndarray, state_count: int, state_converter:dict):\n",
+    "def estimate_sequence(state_transition_matrix:np.ndarray, gaussian_params: np.ndarray, initial_state_probability:np.ndarray, observations:np.ndarray, state_count: int) -> List[int]:\n",
     "    observation_count = observations.shape[0]\n",
     "    state_probability_matrix = np.ndarray((state_count, observation_count), dtype=float64)\n",
     "    path = np.ndarray((state_count, observation_count-1), dtype=int)\n",
@@ -88,14 +54,14 @@
     "        path[:,i-1] = np.argmax(prob, axis=1)\n",
     "        state_probability_matrix[:,i] = np.max(prob, axis=1)\n",
     "\n",
-    "    out_path = ['' for _ in range(observation_count)]\n",
+    "    out_path = [-1 for _ in range(observation_count)]\n",
     "    sink_index = np.argmax(state_probability_matrix[:,-1])\n",
-    "    out_path[-1] = state_converter[sink_index]\n",
+    "    out_path[-1] = sink_index\n",
     "    for i in range(observation_count-2,-1,-1):\n",
     "        sink_index = path[sink_index, i]\n",
-    "        out_path[i] = state_converter[sink_index]\n",
+    "        out_path[i] = sink_index\n",
     "\n",
-    "    return path, state_probability_matrix, emission_matrix, out_path"
+    "    return out_path"
    ],
    "metadata": {
     "collapsed": false,
@@ -106,7 +72,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 4,
+   "outputs": [],
+   "source": [
+    "# Viterbi algorithm\n",
+    "def viterbi(state_transition_matrix:np.ndarray, gaussian_params: np.ndarray, initial_state_probability:np.ndarray, observations:np.ndarray, state_count: int, state_converter:dict) -> list:\n",
+    "    path = estimate_sequence(state_transition_matrix, gaussian_params, initial_state_probability, observations, state_count)\n",
+    "    sequence = []\n",
+    "    for index in path:\n",
+    "        sequence.append(state_converter[index])\n",
+    "    return sequence"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "outputs": [],
    "source": [
     "# Baum-Welch Learning\n",
@@ -122,13 +108,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 6,
    "outputs": [
     {
      "data": {
       "text/plain": "(1000, 1)"
      },
-     "execution_count": 160,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -147,13 +133,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 7,
    "outputs": [
     {
      "data": {
       "text/plain": "array([[200, 100],\n       [ 10,  10]])"
      },
-     "execution_count": 161,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -180,13 +166,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 8,
    "outputs": [
     {
      "data": {
       "text/plain": "(2,)"
      },
-     "execution_count": 162,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -208,10 +194,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 9,
    "outputs": [],
    "source": [
-    "# estimate_sequence(transition_matrix, gaussian_parameters, initial_distribution, observed_states, no_of_states, index_state_map)"
+    "hidden_path = viterbi(transition_matrix, gaussian_parameters, initial_distribution, observed_states, no_of_states, index_state_map)"
    ],
    "metadata": {
     "collapsed": false,
@@ -222,91 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
-   "outputs": [],
-   "source": [
-    "a, b, c, hidden_path = viterbi(transition_matrix, gaussian_parameters, initial_distribution, observed_states, no_of_states, index_state_map)"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 165,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "array([[1, 1],\n       [1, 1],\n       [1, 1],\n       ...,\n       [0, 1],\n       [0, 1],\n       [1, 1]])"
-     },
-     "execution_count": 165,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# norm.pdf(104.524317662043, loc=gaussian_parameters[:,0], scale=gaussian_parameters[:,1])\n",
-    "a.T"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 166,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "array([[-5.01858476e+01, -3.61155295e+00],\n       [-5.97561869e+01, -6.95296555e+00],\n       [-6.01843770e+01, -1.02870653e+01],\n       ...,\n       [-1.02142021e+04, -1.02144021e+04],\n       [-1.02717469e+04, -1.02178047e+04],\n       [-1.02735158e+04, -1.02211398e+04]])"
-     },
-     "execution_count": 166,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "b.T"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 167,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "array([[6.40653671e-22, 3.60131591e-02],\n       [1.37903101e-24, 3.93188164e-02],\n       [2.53963017e-23, 3.96074027e-02],\n       ...,\n       [8.51062085e-08, 2.56571442e-07],\n       [1.45716704e-25, 3.69858576e-02],\n       [2.12759494e-24, 3.95700812e-02]])"
-     },
-     "execution_count": 167,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "c.T"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 10,
    "outputs": [
     {
      "name": "stdout",
@@ -317,6 +219,7 @@
     }
    ],
    "source": [
+    "# matching output and writing to file\n",
     "viterbi_output = []\n",
     "with open('./Output/states_Viterbi_wo_learning.txt', 'r') as f:\n",
     "    for line in f.readlines():\n",
