Working on Baum-Welch Learning

--- a/Offline 2/1605053.ipynb
+++ b/Offline 2/1605053.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 22,
    "outputs": [],
    "source": [
     "# get stationary dustribution of transition matrix\n",
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 23,
    "outputs": [],
    "source": [
     "def estimate_sequence(state_transition_matrix:np.ndarray, gaussian_params: np.ndarray, initial_state_probability:np.ndarray, observations:np.ndarray, state_count: int) -> List[int]:\n",
@@ -54,7 +54,7 @@
     "        path[:,i-1] = np.argmax(prob, axis=1)\n",
     "        state_probability_matrix[:,i] = np.max(prob, axis=1)\n",
     "\n",
-    "    out_path = [-1 for _ in range(observation_count)]\n",
+    "    out_path = [-1] * observation_count\n",
     "    sink_index = np.argmax(state_probability_matrix[:,-1])\n",
     "    out_path[-1] = sink_index\n",
     "    for i in range(observation_count-2,-1,-1):\n",
@@ -72,16 +72,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 24,
    "outputs": [],
    "source": [
     "# Viterbi algorithm\n",
     "def viterbi(state_transition_matrix:np.ndarray, gaussian_params: np.ndarray, initial_state_probability:np.ndarray, observations:np.ndarray, state_count: int, state_converter:dict) -> list:\n",
     "    path = estimate_sequence(state_transition_matrix, gaussian_params, initial_state_probability, observations, state_count)\n",
-    "    sequence = []\n",
-    "    for index in path:\n",
-    "        sequence.append(state_converter[index])\n",
-    "    return sequence"
+    "    return [state_converter[index] for index in path]"
    ],
    "metadata": {
     "collapsed": false,
@@ -92,11 +89,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "def forward(state_transition_matrix: np.ndarray, state_count:int, observations: np.ndarray, emission_matrix: np.ndarray, initial_transition_probability: np.ndarray) -> np.ndarray:\n",
+    "    observation_count = observations.shape[0]\n",
+    "    alpha = np.ndarray((state_count, observation_count), dtype=float64)\n",
+    "    alpha[:,0] = initial_transition_probability * emission_matrix[:,0]\n",
+    "    for i in range(observation_count):\n",
+    "        prob = alpha[:,i-1] * state_transition_matrix * emission_matrix[:,i].reshape(-1,1)\n",
+    "        alpha[:,i] = np.sum(prob, axis=1)\n",
+    "\n",
+    "    return alpha"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "def backward(state_transition_matrix: np.ndarray, state_count:int, observations: np.ndarray, emission_matrix: np.ndarray) -> np.ndarray:\n",
+    "    observation_count = observations[0]\n",
+    "    beta = np.ndarray((state_count, observation_count), dtype=float64)\n",
+    "    beta[:,-1] = 1\n",
+    "    for i in range(observation_count-2, -1, -1):\n",
+    "        prob = beta[:, i+1] * state_transition_matrix * emission_matrix[:, i+1].reshape(-1,1)\n",
+    "        beta[:,i] = np.sum(prob)\n",
+    "\n",
+    "    return beta"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
    "outputs": [],
    "source": [
     "# Baum-Welch Learning\n",
-    "def baum_welch():\n",
+    "def baum_welch(state_transition_matrix: np.ndarray, state_count:int, observations: np.ndarray, emission_matrix: np.ndarray, initial_transition_probability: np.ndarray):\n",
     "    pass"
    ],
    "metadata": {
@@ -108,13 +149,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 26,
    "outputs": [
     {
      "data": {
       "text/plain": "(1000, 1)"
      },
-     "execution_count": 6,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -133,13 +174,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 27,
    "outputs": [
     {
      "data": {
       "text/plain": "array([[200, 100],\n       [ 10,  10]])"
      },
-     "execution_count": 7,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -166,13 +207,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 28,
    "outputs": [
     {
      "data": {
       "text/plain": "(2,)"
      },
-     "execution_count": 8,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -194,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 29,
    "outputs": [],
    "source": [
     "hidden_path = viterbi(transition_matrix, gaussian_parameters, initial_distribution, observed_states, no_of_states, index_state_map)"
@@ -208,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 30,
    "outputs": [
     {
      "name": "stdout",
