Trying to figure out Baum-Welch

--- a/Offline 2/1605053.ipynb
+++ b/Offline 2/1605053.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -14,8 +14,9 @@
     "from itertools import islice\n",
     "from scipy.linalg import eig\n",
     "from scipy.stats import norm\n",
-    "from numpy import float64\n",
-    "from typing import List"
+    "from numpy import float64, longdouble\n",
+    "from typing import List\n",
+    "from sklearn.preprocessing import normalize"
    ]
   },
   {
@@ -137,8 +138,26 @@
    "outputs": [],
    "source": [
     "# Baum-Welch Learning\n",
-    "def baum_welch(state_transition_matrix: np.ndarray, state_count:int, observations: np.ndarray, emission_matrix: np.ndarray, initial_transition_probability: np.ndarray):\n",
-    "    pass"
+    "def baum_welch(state_transition_matrix: np.ndarray, state_count:int, observations: np.ndarray, gaussian_params:np.ndarray, initial_transition_probability: np.ndarray, no_of_iterations:int):\n",
+    "    observation_count = observations[0]\n",
+    "\n",
+    "    for _ in range(no_of_iterations):\n",
+    "        emission_matrix = norm(loc=gaussian_params[0,:], scale=gaussian_params[1,:]).pdf(observations).T\n",
+    "        alpha = forward(state_transition_matrix, state_count, observations, emission_matrix, initial_transition_probability)\n",
+    "        beta = backward(state_transition_matrix, state_count, observations, emission_matrix)\n",
+    "        gamma = normalize(alpha * beta, axis=1)\n",
+    "        xi = np.ndarray((observation_count, state_count, state_count), dtype=longdouble)\n",
+    "        for t in range(observation_count):\n",
+    "            for i in range(state_count):\n",
+    "                for j in range(state_count):\n",
+    "                    xi[t,i,j] = alpha[i,t] * state_transition_matrix[i,j] * beta[j,t+1] * emission_matrix[j,t+i]\n",
+    "\n",
+    "        for t in range(observation_count):\n",
+    "            xi[t,:,:] = alpha[:,t] * state_transition_matrix * beta[:,t+1] * emission_matrix[:,t+1]\n",
+    "\n",
+    "        xi_k = np.sum(xi, axis=2)\n",
+    "        xi_w = np.sum(xi_k, axis=1).reshape(-1,1).T\n",
+    "        xi = xi / xi_w"
    ],
    "metadata": {
     "collapsed": false,
@@ -279,6 +298,52 @@
     "with open('./my_output/states_Viterbi_wo_learning.txt', 'w') as f:\n",
     "    for item in hidden_path:\n",
     "        f.write(item+'\\n')"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[ 1  2]\n",
+      "  [ 3  4]]\n",
+      "\n",
+      " [[ 5  6]\n",
+      "  [ 7  8]]\n",
+      "\n",
+      " [[ 9 10]\n",
+      "  [11 12]]]\n",
+      "(3, 2, 2)\n",
+      "[[ 3  7]\n",
+      " [11 15]\n",
+      " [19 23]]\n",
+      "(3, 2)\n",
+      "[[10]\n",
+      " [26]\n",
+      " [42]]\n",
+      "(3, 1)\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = np.arange(1,13).reshape((3,2,2))\n",
+    "print(a)\n",
+    "print(a.shape)\n",
+    "a = np.sum(a, axis=2)\n",
+    "print(a)\n",
+    "print(a.shape)\n",
+    "a = np.sum(a, axis=1).reshape(-1,1)\n",
+    "print(a)\n",
+    "print(a.shape)"
    ],
    "metadata": {
     "collapsed": false,
