Don't know how to update the gaussian parameters

--- a/Offline 2/1605053.ipynb
+++ b/Offline 2/1605053.ipynb
@@ -157,7 +157,10 @@
     "\n",
     "        xi_k = np.sum(xi, axis=2)\n",
     "        xi_w = np.sum(xi_k, axis=1).reshape(-1,1).T\n",
-    "        xi = xi / xi_w"
+    "        xi = xi / xi_w\n",
+    "\n",
+    "        state_transition_matrix = np.sum(xi, axis=0) / np.sum(gamma, axis=1)\n",
+    "        "
    ],
    "metadata": {
     "collapsed": false,
